<resources xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="msg_camera_framework_bug">抱歉，Android相机出现问题。您可能需要重启设备。</string>
	<string name="upload_success">记录上传成功!</string>
	<string name="upload_form_success">记录数据上传成功,图片后台自动上传中...</string>
	<string name="upload_fail">记录上传失败,请稍后重试!</string>
	<string name="upload_auto">记录上传失败, 重新自动上传中...</string>
	<string name="upload_visit_background">拜访记录后台上传中...</string>
	<string name="upload_visit_evaluate_background">服务评价后台上传中...</string>
	<string name="upload_visit_mc_background">机修记录后台上传中...</string>
    <string name="dealer_title">经销商</string>
    <string name="dealer_detail_title">详细资料</string>
    <string name="client_add_title">客户新增</string>
    <string name="client_title">客户信息</string>
    <string name="level3">优秀</string>
    <string name="level2">良好</string>
    <string name="level1">一般</string>
    <string name="level0">差</string>
    <string name="visit_start_tips">说明：点击“出发签到”自动获取当前位置和时间，提交成功后执行下一步操作流程。</string>
    <string name="visit_arrvie_tips">说明：点击“抵达签到”自动获取当前位置和时间，提交成功后执行下一步操作流程。</string>
    <string name="visit_sign_tips">说明：请客户在空白位置进行手写签名。</string>
    <string name="app_name">杰克</string>
    <string name="menu_settings">退出</string>
    <string name="title_activity_reg">激活软件</string>
    <string name="title_activity_unboundlind_step1">验证手机号</string>
    <string name="title_activity_unboundlind_step2">填写验证码</string>
    <string name="title_activity_checkin">考勤签到</string>
    <string name="title_activity_checkout">考勤签退</string>
    <string name="title_activity_inhistroy">签到历史</string>
    <string name="title_activity_outhistroy">签退历史</string>
    <string name="title_activity_lookaround">周边查找</string>
    <string name="title_activity_pathplanning">路径规划</string>
    <string name="title_activity_checkinhis">考勤签到记录</string>
    <string name="title_activity_checkouthis">考勤签退记录</string>
    <string name="title_activity_checkinsta">考勤签到统计</string>
    <string name="title_activity_checkoutsta">考勤签退统计</string>
    <string name="title_activity_set">参数设置</string>
    <string name="title_activity_about">关于</string>
    <string name="title_activity_daily">日志上传</string>
    <string name="title_activity_clearfile">清除本地历史记录文件</string>
    <string name="title_activity_logout">退出</string>
    <string name="title_activity_info">信息上报</string>
    <string name="title_activity_task">我的任务</string>
    <string name="title_activity_cust">客户信息</string>
    <string name="title_activity_version">版本</string>
    <string name="title_activity_help">帮助</string>
    <string name="title_activity_bulletin">公告通知</string>
    <string name="title_activity_view">详细</string>
   <string name="reading">数据读取中，请稍候&#8230;</string>
    <string name="title_salestaskallocation">客户销量分配</string>
    <string name="salestaskallocation_add">销量任务分配</string>
    <string name="sta_cust">客户：</string>
    <string name="sta_month">日期：</string>
    <string name="sta_targettask">月目标任务：</string>
    <string name="salesreport_add">销量上报</string>
    <string name="salesreport_goodslist">上报销量商品：</string>
    <string name="salesreport_nodata">管理员未配置数据!</string>
    <string name="targettt_nodata">目标任务数据未分配!</string>
    <string name="salesreport_remark">备注：</string>
    <string name="sta_cust_name">客户</string>
    <string name="title_salesreport_list">销量上报</string>
    <string name="title_mquery">月目标任务查询</string>
    <string name="tip_waitmoment">正在定位中，请稍后点击</string>
    <string name="title_activity_checkin_desc">通过手机GPS精定位功能进行上下班考勤。</string>
    <string name="title_activity_checkout_desc">考勤签退。</string>
    <string name="title_activity_set_desc">消息通知设置和系统信息。</string>
    <string name="title_activity_about_desc">关于。</string>
    <string name="title_activity_logout_desc">退出。</string>
    <string name="title_activity_info_desc">通过手机GPS精定位功能进行工作内容的信息录入，完成后上传至平台。</string>
    <string name="title_activity_task_desc">手机终端接收平台下发的工作任务，终端用户执行并填写工作任务完成情况，完成后上传到平台。</string>
    <string name="title_activity_cust_desc">手机终端接收平台侧同步的客户信息，其作用是方便查看客户的信息及位置。</string>
    <string name="title_activity_version_desc">关于本软件的系统版本信息。</string>
    <string name="title_activity_help_desc">帮助。</string>
    <string name="info_add_title">新增信息</string>
    <string name="info_title">标题：</string>
    <string name="info_content">内容：</string>
    <string name="info_loc">位置：</string>
    <string name="info_pic">图片：</string>
    <string name="info_soundrecord">录音：</string>
    <string name="info_soundrecord_message">正在录音中..</string>
    <string name="info_video">视频：</string>
    <string name="salesv_title">销量上报</string>
    <string name="salesv_task_query">销量任务查询</string>
    <string name="salesv_task_allot">销量任务分配</string>
    <string name="add">新增</string>
    <string name="view">查看</string>
    <string name="del">删除</string>
    <string name="upd">修改</string>
    <string name="back">返回</string>
    <string name="bt_submit_text">提交</string>
    <string name="info_title_def">标题</string>
    <string name="info_uploadDate_def">上报时间</string>
    <string name="info_lon_def">经度</string>
    <string name="info_lat_def">纬度</string>
    <string name="info_content_def">内容</string>
    <string name="ShortCut_reply">快捷回复</string>
    <string name="add_location">上报位置</string>
    <string name="take_photo">拍摄照片</string>
    <string name="recorder_video">录制视频</string>
    <string name="add_Soundrecord">录制音频</string>
    <string name="pick_photo">手机相册</string>
    <string name="info_title_edit_error">请输入标题</string>
    <string name="info_content_edit_error">请输入内容</string>
    <string name="noSDCard">没有SD卡</string>
    <string name="info_add_error">信息上报失败</string>
    <string name="loaction_loading">定位中 &#8230;</string>
    <string name="info_upload_succ">信息上报成功</string>
    <string name="info_upload_err">信息上报失败，请重试</string>
    <string name="cust_upload_succ">客户信息上报成功</string>
    <string name="cust_upload_err">客户信息上报失败，请重试</string>
    <string name="baifang_upload_succ">拜访记录上报成功</string>
    <string name="baifang_upload_err">拜访记录上报失败，请重试</string>
    <string name="info_img">上报图片</string>
    <string name="plan_not_do">待办任务</string>
    <string name="plan_has_do">已办任务</string>
    <string name="plan_date">完成期限</string>
    <string name="plan_releasedate">发布时间</string>
    <string name="plan_remark">计划事由</string>
    <string name="plan_location">目的地</string>
    <string name="plan_lon">经度</string>
    <string name="plan_lat">纬度</string>
    <string name="plan_text">完成情况</string>
    <string name="plan_img">图片</string>
    <string name="plan_text_edit_error">请输入完成情况</string>
    <string name="plan_new">您的工作任务有变化</string>
    <string name="bulletin_new">您的公告通知有更新</string>
    <string name="knowledge_new">您的知识库有更新</string>
    <string name="plan_title">标题</string>
    <string name="plan_upload_succ">任务办理成功</string>
    <string name="plan_upload_again">该任务已经办理</string>
    <string name="plan_upload_del">该任务已取消</string>
    <string name="plan_upload_err">任务办理失败，请重试</string>
    <string name="cust_new">新增客户</string>
    <string name="cust_clientName">客户名称</string>
    <string name="cust_clientName_">客户名称：</string>
    <string name="cust_contacts">联系人</string>
    <string name="cust_contacts_">&#160;&#160;&#160;&#160;联系人：</string>
    <string name="cust_job">职位</string>
    <string name="cust_job_">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;职位：</string>
    <string name="cust_phone">电话1</string>
    <string name="cust_phone2">电话2</string>
    <string name="cust_phone3">电话3</string>
    <string name="cust_phone4">电话4</string>
    <string name="cust_phone_">&#160;&#160;&#160;&#160;&#160;&#160;电话1：</string>
    <string name="cust_phone2_">&#160;&#160;&#160;&#160;&#160;&#160;电话2：</string>
    <string name="cust_phone3_">&#160;&#160;&#160;&#160;&#160;&#160;电话3：</string>
    <string name="cust_phone4_">&#160;&#160;&#160;&#160;&#160;&#160;电话4：</string>
    <string name="cust_email">邮箱</string>
    <string name="cust_email_">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;邮箱：</string>
    <string name="cust_location">地址</string>
    <string name="cust_location_">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;地址：</string>
    <string name="cust_area">区域</string>
    <string name="cust_area_">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;区域：</string>
    <string name="cust_type">客户类型</string>
    <string name="cust_type_">客户类型：</string>
    <string name="cust_share_1">企业共享</string>
    <string name="cust_share_2">员工私有</string>
    <string name="cust_addbaifang">新增拜访记录</string>
    <string name="cust_baifanglishi">历史拜访记录</string>
    <string name="cust_sel_type">选择类型</string>
    <string name="cust_sel_area">选择区域</string>
    <string name="baifang_rizhi">拜访日志</string>
    <string name="baifang_cust">客户</string>
    <string name="baifang_time">拜访日期</string>
    <string name="baifang_loc">拜访位置</string>
    <string name="baifang_img">拜访图片</string>
    <string name="baifang_titl">标题</string>
    <string name="baifang_baifang">客户拜访记录</string>
    <string name="set_userinfo">个人信息</string>
    <string name="set_msg_amind">消息提醒</string>
    <string name="set_system_para">系统参数</string>
    <string name="set_clear_history">清除记录图片视频</string>
    <string name="set_help">引导页</string>
    <string name="set_daily">日志上传</string>
    <string name="set_version">版本更新</string>
    <string name="set_about">关于</string>
    <string name="set_msg_title">通知设置</string>
    <string name="set_title">系统参数</string>
    <string name="set_person">个人信息</string>
    <string name="set_msg">消息通知</string>
    <string name="set_shock">振动</string>
    <string name="set_ip">IP地址</string>
    <string name="set_time">定位时间</string>
    <string name="set_interval">时间间隔</string>
    <string name="set_date">定位日期</string>
    <string name="set_n_date">不定位日期</string>
    <string name="set_ip_">IP地址：</string>
    <string name="set_time_">定位时间：</string>
    <string name="set_interval_">时间间隔：</string>
    <string name="set_date_">定位日期：</string>
    <string name="set_n_date_">不定位日期：</string>
    <string name="set_mobile">手机号码：</string>
    <string name="set_mobile_value">&#160;</string>
    <string name="set_imsi">IMSI：</string>
    <string name="set_imsi_value">&#160;</string>
    <string name="imei">IMEI</string>
    <string name="set_ip_value">221.122.1.10</string>
    <string name="version_desc">版本：</string>
    <string name="about_remind">友情提醒</string>
    <string name="about_remind_desc">使用本软件会产生一定的网络流量，请选购合适的数据套餐包，详细资费信息请咨询所在地中国联通。</string>
    <string name="about_remind_zyy">使用本软件会产生一定的网络流量，请选购合适的数据套餐包，详细资费信息请咨询所在地运营商。</string>
    <string name="about_version">支持Android2.1或以上版本</string>
    <string name="telecom_operator">中国联通</string>
    <string name="technical_support">杭州东创科技股份有限公司</string>
    <string name="checkin_tips">温馨提示:</string>
    <string name="checkin_tips_1">本软件基于GPS精确定位，使用本软件需要开启GPS模块；</string>
    <string name="reg_tips_1">1.初次使用请输入手机号码进行软件激活操作，如果没有进行激活，软件无法使用.</string>
    <string name="reg_tips_2">2.在激活时，您手机上的SIM卡需要正确配置3G或者GPRS上网功能，否则无法完成激活.</string>
    <string name="reg_tips_3">3.激活成功后，本软件会绑定本机SIM卡.</string>
    <string name="reg_tips_4">4.软件卸载重装、更换手机、手机补卡需要重新操作进行软件激活.</string>
    <string name="reg_tips_5">5.激活软件若提示“IMSI校验失败”，请点击按钮“解绑手机卡”.</string>
    <string name="reg_tips_6">6.如需帮助请致电 400 636 0336 （工作日：周一至周五 9：00~17：00）.</string>
    <string name="reg_text">确认</string>
    <string name="reg_edit_def">输入手机号码</string>
    <string name="reg_edit_def2">请输入验证码</string>
    <string name="reg_unbundling">解绑手机卡</string>
    <string name="reg_resend">重新获取(60)</string>
    <string name="reg_unbundling_next">下一步</string>
    <string name="reg_unbundling_tip1">请输入本机号码，点击下一步"获取验证码".</string>
    <string name="reg_unbundling_tip2">我们给你发送了一条短信，请将短信中的数字作为验证码填写在下面，然后点击"解绑手机卡".</string>
    <string name="reg_unbundling_tip3">您的手机号是：18657100261</string>
    <string name="reg_unbundling_tip4">如需人工帮助请致电 400 636 0336 （工作日：周一至周五 9：00~17：00）</string>
</resources>