<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45.0dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/service_name"
            android:layout_width="100.0dp"
            android:layout_height="45.0dp"
            android:gravity="center"
            android:text="退货/零配件清退"
            android:textColor="@color/default_key_color"
            android:textSize="12.0sp" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="#aeb0b2" />

        <RadioGroup
            android:id="@+id/service_value"
            android:layout_width="0dp"
            android:layout_height="45.0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/level3"
                style="@style/radio_check_style"
                android:text="@string/level3"
                android:checked="true" />

            <RadioButton
                android:id="@+id/level2"
                style="@style/radio_check_style"
                android:text="@string/level2" />

            <RadioButton
                android:id="@+id/level1"
                style="@style/radio_check_style"
                android:text="@string/level1" />

            <RadioButton
                android:id="@+id/level0"
                style="@style/radio_check_style"
                android:text="@string/level0" />
        </RadioGroup>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@color/default_line_color" />

</LinearLayout>